assignment3/initial_test/src/main/d96/parser/.antlr/D96Parser.py
# Generated from e:\Nam3online\Ki212\PPL\Asgment\Asg3\initial\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Break'", "'Foreach'", "'Int'", 
                     "'Null'", "'Constructor'", "'Continue'", "'True'", 
                     "'Float'", "'Class'", "'Destructor'", "'If'", "'False'", 
                     "'Boolean'", "'Val'", "'New'", "'Elseif'", "'Array'", 
                     "'String'", "'Var'", "'By'", "'Else'", "'In'", "'Return'", 
                     "'Self'", "'+'", "'!'", "'!='", "'==.'", "'-'", "'&&'", 
                     "'<'", "'+.'", "'*'", "'||'", "'<='", "'/'", "'=='", 
                     "'>'", "'::'", "'%'", "'='", "'>='", "'['", "']'", 
                     "'{'", "'}'", "'('", "')'", "';'", "'.'", "','", "':'", 
                     "'..'" ]

    symbolicNames = [ "<INVALID>", "BLOCK_CMT", "BREAK", "FOREACH", "INT", 
                      "NULL", "CONSTRUCTOR", "CONTINUE", "TRUE", "FLOAT", 
                      "CLASS", "DESTRUCTOR", "IF", "FALSE", "BOOLEAN", "VAL", 
                      "NEW", "ELSEIF", "ARRAY", "STRING", "VAR", "BY", "ELSE", 
                      "IN", "RETURN", "SELF", "ADD", "NOT", "NOT_EQUAL", 
                      "EQUALDOT", "SUB", "AND", "LT", "ADDDOT", "MUL", "OR", 
                      "LE", "DIV", "EQUAL", "GT", "SC", "MOD", "ASSIGN", 
                      "GE", "LSB", "RSB", "LB", "RB", "LP", "RP", "SM", 
                      "DOT", "CM", "Extended", "FROMTO", "DECIMAL_INTEGER_GT_ZERO", 
                      "DECIMAL_INTEGER", "OCT_INTEGER_GT_ZERO", "OCT_INTEGER", 
                      "HEX_INTEGER_GT_ZERO", "HEX_INTEGER", "BIN_INTEGER_GT_ZERO", 
                      "BIN_INTEGER", "FLOAT_NUMBER", "BOOLEAN_LITERAL", 
                      "UNCLOSE_STRING", "STRING_LITERAL", "ID", "DOLLARID", 
                      "WS", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_declare = 1
    RULE_member_decl = 2
    RULE_member = 3
    RULE_att_declare = 4
    RULE_att_declarelist = 5
    RULE_att_names = 6
    RULE_att_init_value = 7
    RULE_data_type = 8
    RULE_primitive_type = 9
    RULE_classtype = 10
    RULE_method_declare = 11
    RULE_func_declare = 12
    RULE_params = 13
    RULE_param = 14
    RULE_idnamelist = 15
    RULE_blockstatment = 16
    RULE_stament = 17
    RULE_literal = 18
    RULE_index_array_literal = 19
    RULE_multi_array = 20
    RULE_arraylist = 21
    RULE_array_type = 22
    RULE_vardecl_stm = 23
    RULE_varlist = 24
    RULE_variable_names = 25
    RULE_variable_init_value = 26
    RULE_assign_stm = 27
    RULE_scalarvar = 28
    RULE_indexed_exp = 29
    RULE_if_stm = 30
    RULE_elseif_stm = 31
    RULE_forin_stm = 32
    RULE_break_stm = 33
    RULE_continue_stm = 34
    RULE_return_stm = 35
    RULE_method_invocation_stm = 36
    RULE_contructor_declare = 37
    RULE_detructor_declare = 38
    RULE_idname = 39
    RULE_index_operator = 40
    RULE_exp = 41
    RULE_exp0 = 42
    RULE_exp1 = 43
    RULE_exp2 = 44
    RULE_exp3 = 45
    RULE_exp4 = 46
    RULE_exp5 = 47
    RULE_exp6 = 48
    RULE_exp7 = 49
    RULE_exp8 = 50
    RULE_exp9 = 51
    RULE_exp10 = 52
    RULE_func_call = 53
    RULE_static_operand = 54
    RULE_static_func_call = 55
    RULE_method_invocate = 56
    RULE_object_exp = 57
    RULE_static_method_invocate = 58
    RULE_sizearray = 59
    RULE_intlit = 60

    ruleNames =  [ "program", "class_declare", "member_decl", "member", 
                   "att_declare", "att_declarelist", "att_names", "att_init_value", 
                   "data_type", "primitive_type", "classtype", "method_declare", 
                   "func_declare", "params", "param", "idnamelist", "blockstatment", 
                   "stament", "literal", "index_array_literal", "multi_array", 
                   "arraylist", "array_type", "vardecl_stm", "varlist", 
                   "variable_names", "variable_init_value", "assign_stm", 
                   "scalarvar", "indexed_exp", "if_stm", "elseif_stm", "forin_stm", 
                   "break_stm", "continue_stm", "return_stm", "method_invocation_stm", 
                   "contructor_declare", "detructor_declare", "idname", 
                   "index_operator", "exp", "exp0", "exp1", "exp2", "exp3", 
                   "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", "exp10", 
                   "func_call", "static_operand", "static_func_call", "method_invocate", 
                   "object_exp", "static_method_invocate", "sizearray", 
                   "intlit" ]

    EOF = Token.EOF
    BLOCK_CMT=1
    BREAK=2
    FOREACH=3
    INT=4
    NULL=5
    CONSTRUCTOR=6
    CONTINUE=7
    TRUE=8
    FLOAT=9
    CLASS=10
    DESTRUCTOR=11
    IF=12
    FALSE=13
    BOOLEAN=14
    VAL=15
    NEW=16
    ELSEIF=17
    ARRAY=18
    STRING=19
    VAR=20
    BY=21
    ELSE=22
    IN=23
    RETURN=24
    SELF=25
    ADD=26
    NOT=27
    NOT_EQUAL=28
    EQUALDOT=29
    SUB=30
    AND=31
    LT=32
    ADDDOT=33
    MUL=34
    OR=35
    LE=36
    DIV=37
    EQUAL=38
    GT=39
    SC=40
    MOD=41
    ASSIGN=42
    GE=43
    LSB=44
    RSB=45
    LB=46
    RB=47
    LP=48
    RP=49
    SM=50
    DOT=51
    CM=52
    Extended=53
    FROMTO=54
    DECIMAL_INTEGER_GT_ZERO=55
    DECIMAL_INTEGER=56
    OCT_INTEGER_GT_ZERO=57
    OCT_INTEGER=58
    HEX_INTEGER_GT_ZERO=59
    HEX_INTEGER=60
    BIN_INTEGER_GT_ZERO=61
    BIN_INTEGER=62
    FLOAT_NUMBER=63
    BOOLEAN_LITERAL=64
    UNCLOSE_STRING=65
    STRING_LITERAL=66
    ID=67
    DOLLARID=68
    WS=69
    ILLEGAL_ESCAPE=70
    ERROR_CHAR=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declareContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declareContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 122
                self.class_declare()
                self.state = 125 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 127
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def member_decl(self):
            return self.getTypedRuleContext(D96Parser.Member_declContext,0)


        def Extended(self):
            return self.getToken(D96Parser.Extended, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_declare




    def class_declare(self):

        localctx = D96Parser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(D96Parser.CLASS)
            self.state = 130
            self.match(D96Parser.ID)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.Extended:
                self.state = 131
                self.match(D96Parser.Extended)
                self.state = 132
                self.match(D96Parser.ID)


            self.state = 135
            self.member_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.MemberContext)
            else:
                return self.getTypedRuleContext(D96Parser.MemberContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_member_decl




    def member_decl(self):

        localctx = D96Parser.Member_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_member_decl)
        self._la = 0 # Token type
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(D96Parser.LB)
                self.state = 139 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 138
                    self.member()
                    self.state = 141 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (((((_la - 6)) & ~0x3f) == 0 and ((1 << (_la - 6)) & ((1 << (D96Parser.CONSTRUCTOR - 6)) | (1 << (D96Parser.DESTRUCTOR - 6)) | (1 << (D96Parser.VAL - 6)) | (1 << (D96Parser.VAR - 6)) | (1 << (D96Parser.ID - 6)) | (1 << (D96Parser.DOLLARID - 6)))) != 0)):
                        break

                self.state = 143
                self.match(D96Parser.RB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(D96Parser.LB)
                self.state = 146
                self.match(D96Parser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_declare(self):
            return self.getTypedRuleContext(D96Parser.Att_declareContext,0)


        def method_declare(self):
            return self.getTypedRuleContext(D96Parser.Method_declareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_member)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.att_declare()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLARID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.method_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_declarelist(self):
            return self.getTypedRuleContext(D96Parser.Att_declarelistContext,0)


        def SM(self):
            return self.getToken(D96Parser.SM, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_att_declare




    def att_declare(self):

        localctx = D96Parser.Att_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_att_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 154
            self.att_declarelist()
            self.state = 155
            self.match(D96Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_declarelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_names(self):
            return self.getTypedRuleContext(D96Parser.Att_namesContext,0)


        def Extended(self):
            return self.getToken(D96Parser.Extended, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def att_init_value(self):
            return self.getTypedRuleContext(D96Parser.Att_init_valueContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_att_declarelist




    def att_declarelist(self):

        localctx = D96Parser.Att_declarelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_att_declarelist)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.att_names()
                self.state = 158
                self.match(D96Parser.Extended)
                self.state = 159
                self.data_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.att_init_value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_namesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idname(self):
            return self.getTypedRuleContext(D96Parser.IdnameContext,0)


        def CM(self):
            return self.getToken(D96Parser.CM, 0)

        def att_names(self):
            return self.getTypedRuleContext(D96Parser.Att_namesContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_att_names




    def att_names(self):

        localctx = D96Parser.Att_namesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_att_names)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.idname()
                self.state = 165
                self.match(D96Parser.CM)
                self.state = 166
                self.att_names()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.idname()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_init_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idname(self):
            return self.getTypedRuleContext(D96Parser.IdnameContext,0)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def att_init_value(self):
            return self.getTypedRuleContext(D96Parser.Att_init_valueContext,0)


        def exp(self):
            return self.getTypedRuleContext(D96Parser.ExpContext,0)


        def Extended(self):
            return self.getToken(D96Parser.Extended, 0)

        def data_type(self):
            return self.getTypedRuleContext(D96Parser.Data_typeContext,0)


        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_att_init_value




    def att_init_value(self):

        localctx = D96Parser.Att_init_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_att_init_value)
        try:
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.idname()
                self.state = 172
                self.match(D96Parser.CM)
                self.state = 173
                self.att_init_value()
                self.state = 174
                self.match(D96Parser.CM)
                self.state = 175
                self.exp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.idname()
                self.state = 178
                self.match(D96Parser.Extended)
                self.state = 179
                self.data_type()
                self.state = 180
                self.match(D96Parser.ASSIGN)
                self.state = 181
                self.exp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(D96Parser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(D96Parser.Array_typeContext,0)


        def classtype(self):
            return self.getTypedRuleContext(D96Parser.ClasstypeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_data_type




    def data_type(self):

        localctx = D96Parser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_data_type)
        try:
            self.state = 188
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT, D96Parser.FLOAT, D96Parser.BOOLEAN, D96Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.primitive_type()
                pass
            elif token in [D96Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.array_type()
                pass
            elif token in [D96Parser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 187
                self.classtype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(D96Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(D96Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(D96Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(D96Parser.STRING, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_primitive_type




    def primitive_type(self):
